# CAP8.0

./: .gitignore  README.md  SetupCAP.sh
src/: CAP.cxx  CMakeLists.txt  CMakeListsNoFast.txt  Doxyfile
src/Base/: Accountant.cpp  Accountant.hpp  Aliases.cpp  Aliases.hpp  Array.hpp  BaseLinkDef.h  CMakeLists.txt  CmdlineParser.cpp  CmdlineParser.hpp  Condition.cpp  Condition.hpp  Configuration.cpp  Configuration.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Crc32.cpp  Crc32.hpp  EnvironmentVariables.cpp  EnvironmentVariables.hpp  Exceptions.cpp  Exceptions.hpp  Factory.cpp  Factory.hpp  Filter.cpp  Filter.hpp  MessageLogger.cpp  MessageLogger.hpp  NameHelpers.cpp  NameHelpers.hpp  Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  PhysicsConstants.hpp  PrintHelpers.cpp  PrintHelpers.hpp  Properties.cpp  Properties.hpp  PropertiesParser.cpp  PropertiesParser.hpp  (+12 more)
src/BasicEventGen/: BasicEventGen.cpp  BasicEventGen.hpp  BasicEventGenLinkDef.h  CMakeLists.txt
src/CAPPythia/: CAPPythiaLinkDef.h  CMakeLists.txt  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaEventReader.cpp  PythiaEventReader.hpp
src/Epos/: CMakeLists.txt  EposEventReader.cpp  EposEventReader.hpp
src/Glauber/: CMakeLists.txt  G.tex  Glauber.cpp  Glauber.hpp  GlauberAnalyzer.cpp  GlauberAnalyzer.hpp  GlauberDb.cpp  GlauberDb.hpp  GlauberEvent.cpp  GlauberEvent.hpp  GlauberEventFilter.cpp  GlauberEventFilter.hpp  GlauberEventMoments.cpp  GlauberEventMoments.hpp  GlauberExceptions.cpp  GlauberExceptions.hpp  GlauberGenerator.cpp  GlauberGenerator.hpp  GlauberHistos.cpp  GlauberHistos.hpp  GlauberHistosKeep.cpp  GlauberLinkDef.h  GlauberNucleon.cpp  GlauberNucleon.hpp  GlauberNucleus.cpp  GlauberNucleus.hpp  GlauberNucleusType.cpp  GlauberNucleusType.hpp  GlauberPlotter.cpp  GlauberPlotter.hpp  GlauberPoint.cpp  GlauberPoint.hpp  GlauberResults.aux  GlauberResults.dvi  GlauberResults.out  NNProfile.cpp  NNProfile.hpp  NNXSectVsSqrtS.cpp  NNXSectVsSqrtS.hpp  NNXSectVsSqrtScpp  (+16 more)
src/Global/: CMakeLists.txt  GlobalAnalyzer.cpp  GlobalAnalyzer.hpp  GlobalDerivedHistos.cpp  GlobalDerivedHistos.hpp  GlobalHistos.cpp  GlobalHistos.hpp  GlobalLinkDef.h
src/Helpers/: CMakeLists.txt  CanvasConfiguration.cpp  CanvasConfiguration.hpp  CanvasList.cpp  CanvasList.hpp  GraphConfiguration.cpp  GraphConfiguration.hpp  HelpersLinkDef.h  HistogramGroup.cpp  HistogramGroup.hpp  RootChainManager.cpp  RootChainManager.hpp  RootFileHelpers.cpp  RootFileHelpers.hpp  RootFileManager.cpp  RootFileManager.hpp  RootHistogramHelpers.cpp  RootHistogramHelpers.hpp
src/Jets/: CMakeLists.txt  ChargeAssignment.cpp  ChargeAssignment.hpp  JetAnalyzer.cpp  JetAnalyzer.hpp  JetCalculator.cpp  JetCalculator.hpp  JetFilter.cpp  JetFilter.hpp  JetFilterCreator.cpp  JetFilterCreator.hpp  JetHelpers.cpp  JetHelpers.hpp  JetHistos.cpp  JetHistos.hpp  JetHistosDerived.cpp  JetHistosDerived.hpp  JetLinkDef.h  JetPairHistos.cpp  JetPairHistos.hpp  JetPairHistosDerived.cpp  JetPairHistosDerived.hpp  JetPairMassHistos.cpp  JetPairMassHistos.hpp  JetSingleHistos.cpp  JetSingleHistos.hpp  JetSingleHistosDerived.cpp  JetSingleHistosDerived.hpp  test_main.cpp
src/Latex/: CMakeLists.txt  LatexAuthor.cpp  LatexAuthor.hpp  LatexCommand.cpp  LatexCommand.hpp  LatexDocument.cpp  LatexDocument.hpp  LatexElement.cpp  LatexElement.hpp  LatexEquation.cpp  LatexEquation.hpp  LatexFigure.cpp  LatexFigure.hpp  LatexFigureGroup.cpp  LatexFigureGroup.hpp  LatexFrame.cpp  LatexFrame.hpp  LatexLinkDef.h  LatexList.cpp  LatexList.hpp  LatexPackage.cpp  LatexPackage.hpp  LatexParagraph.cpp  LatexParagraph.hpp  LatexSection.cpp  LatexSection.hpp  LatexSubsection.cpp  LatexSubsection.hpp  LatexSubsubsection.cpp  LatexSubsubsection.hpp  LatexText.cpp  LatexText.hpp
src/Macros/: .rootrc  BTest.C  Converter.C  CreateDict.C  CreateEfficiencyHistograms.C  DeviatesCalculator.C  Example.C  PlotBF.C  PlotJetsBF.C  Quark.C  THC_Old.C  THG.C  THG.C-KEEP  THG_SAVE.C  Test.C  TestCreate.C  X.C  particles.data  particlesNew.data  text.txt
src/Math/: BesselFunctions.cpp  BesselFunctions.hpp  CMakeLists.txt  Complex.cpp  Complex.hpp  DataPoint.cpp  DataPoint.hpp  DataPoints.hpp  DataVectors.cpp  DataVectors.hpp  Histogram.cpp  Histogram.hpp  MathBasicFunctions.cpp  MathBasicFunctions.hpp  MathBasicGeometry.cpp  MathBasicGeometry.hpp  MathBasicIntegration.cpp  MathBasicIntegration.hpp  MathBasicInterpolation.cpp  MathBasicInterpolation.hpp  MathBasicSearch.cpp  MathBasicSearch.hpp  MathBasicSortingFunctions.cpp  MathBasicSortingFunctions.hpp  MathBasicStatistics.cpp  MathBasicStatistics.hpp  MathConstants.hpp  MathExceptions.cpp  MathExceptions.hpp  MathLinkDef.h  Partition.cpp  Partition.hpp  Pdf.cpp  Pdf.hpp  RobustMoments.hpp  ScalarField.cpp  ScalarField.hpp  Vector3D.cpp  Vector3D.hpp  VectorLorentz.cpp  (+1 more)
src/NuDyn/: CMakeLists.txt  NuDynAnalyzer.cpp  NuDynAnalyzer.hpp  NuDynDerivedHistos.cpp  NuDynDerivedHistos.hpp  NuDynHistos.cpp  NuDynHistos.hpp  NuDynLinkDef.h  NuDynPlotter.cpp  NuDynPlotter.hpp
src/PHSD/: CMakeLists.txt  PHSDEventReader.cpp  PHSDEventReader.hpp  PHSDLinkDef.h
src/ParticleFlow/: CMakeLists.txt  ParticleFlowAnalyzer.cpp  ParticleFlowAnalyzer.hpp  ParticleFlowCalculator.cpp  ParticleFlowCalculator.hpp  ParticleFlowDerivedHistos.cpp  ParticleFlowDerivedHistos.hpp  ParticleFlowHistos.cpp  ParticleFlowHistos.hpp  ParticleFlowLinkDef.h
src/ParticlePair/: BalanceFunctionCalculator.cpp  BalanceFunctionCalculator.hpp  CMakeLists.txt  ParticlePairAnalyzer.cpp  ParticlePairAnalyzer.hpp  ParticlePairBfCalculator.cpp  ParticlePairBfCalculator.hpp  ParticlePairBfHistos.cpp  ParticlePairBfHistos.hpp  ParticlePairDerivedHistos.cpp  ParticlePairDerivedHistos.hpp  ParticlePairHistos.cpp  ParticlePairHistos.hpp  ParticlePairLinkDef.h
src/ParticlePair3D/: CMakeLists.txt  ParticlePair3DAnalyzer.cpp  ParticlePair3DAnalyzer.hpp  ParticlePair3DBfHistos.cpp  ParticlePair3DBfHistos.hpp  ParticlePair3DDerivedHistos.cpp  ParticlePair3DDerivedHistos.hpp  ParticlePair3DHistos.cpp  ParticlePair3DHistos.hpp  ParticlePair3DLinkDef.h
src/ParticleSingle/: CMakeLists.txt  (+7 more)
(+4361 files in other folders)
